--- a/TintasShop/src/main/resources/application.properties
+++ b/TintasShop/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=TintasShop
+
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:mem:tintasshopdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
