--- a/TintasShop/src/main/resources/application.properties
+++ b/TintasShop/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Gemini AI configuration (optional)
+# To enable real AI suggestions, set `gemini.api.key` to your API key and `gemini.api.endpoint`
+# to the Gemini model endpoint. If the key is empty, the application will return mocked palettes.
+gemini.api.key=
+gemini.api.endpoint=https://api.example.com/v1/generate
